bk_ida/gccida/g1/want_to_gcse_p
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/want_to_gcse_p/src/gcse.c:1784:28: error: use of undeclared identifier 'machine_mode'
v1 = general_operand( x, ( machine_mode)*( ( unsigned __int8 *)x + 2)); 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/want_to_gcse_p/src/gcse.c:1791:7: error: use of undeclared identifier 'test_insn_13'
if ( !test_insn_13 ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/want_to_gcse_p/src/gcse.c:1794:30: error: invalid suffix 'xmode' on integer constant
v5 = gen_rtx_REG( *(short *)0xmode, 106); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/want_to_gcse_p/src/gcse.c:1797:1: error: use of undeclared identifier 'test_insn_13'
test_insn_13 = insn_raw; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/want_to_gcse_p/src/gcse.c:1800:20: error: use of undeclared identifier 'test_insn_13'
ggc_add_rtx_root( &test_insn_13, 1); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/want_to_gcse_p/src/gcse.c:1802:41: error: use of undeclared identifier 'test_insn_13'
*( _BYTE *)( *( _QWORD *)( *( _QWORD *)&test_insn_13[2] + 8LL) + 2LL) = *( ( _BYTE *)x + 2); 
                                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/want_to_gcse_p/src/gcse.c:1803:6: error: use of undeclared identifier 'test_insn_13'
v2 = test_insn_13; 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/want_to_gcse_p/src/gcse.c:1804:28: error: use of undeclared identifier 'test_insn_13'
*( _QWORD *)( *( _QWORD *)&test_insn_13[2] + 16LL) = x; 
                           ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/want_to_gcse_p/src/obj/gcse.o] Error 1
